# ChangeLog for dev-java/netbeans-javafx
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-javafx/ChangeLog,v 1.10 2012/12/09 19:34:25 ago Exp $

  09 Dec 2012; <ago@gentoo.org> netbeans-javafx-7.2.ebuild:
  Stable for x86, wrt bug #441170

  09 Dec 2012; <ago@gentoo.org> netbeans-javafx-7.2.ebuild:
  Stable for amd64, wrt bug #441170

*netbeans-javafx-7.2 (25 Jul 2012)

  25 Jul 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-javafx-7.2.ebuild:
  netbeans 7.2 release

  30 May 2012; Johannes Huber <johu@gentoo.org> netbeans-javafx-7.1.2.ebuild:
  Stable for x86, wrt bug #417799

  28 May 2012; Agostino Sarubbo <ago@gentoo.org> netbeans-javafx-7.1.2.ebuild:
  Stable for amd64, wrt bug #417799

  07 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  netbeans-javafx-7.1.1.ebuild:
  x86 stable wrt bug #414387

  06 May 2012; Agostino Sarubbo <ago@gentoo.org> netbeans-javafx-7.1.1.ebuild:
  Stable for amd64, wrt bug #414387

*netbeans-javafx-7.1.2 (26 Apr 2012)

  26 Apr 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-javafx-7.1.2.ebuild:
  Version bump in 7.1 slot

*netbeans-javafx-7.1.1 (05 Mar 2012)

  05 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-javafx-7.1.ebuild, +netbeans-javafx-7.1.1.ebuild:
  Version bump

*netbeans-javafx-7.1 (06 Jan 2012)

  06 Jan 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-javafx-7.1.ebuild, +metadata.xml:
  New package
