@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/netbeans-javafx
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-javafx/ChangeLog,v 1.10 2012/12/09 19:34:25 ago Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-javafx/ChangeLog,v 1.11 2013/02/21 15:50:38 fordfrog Exp $
+
+*netbeans-javafx-7.3 (21 Feb 2013)
+
+  21 Feb 2013; Miroslav Šulc <fordfrog@gentoo.org>
+  +netbeans-javafx-7.3.ebuild:
+  version bump
 
   09 Dec 2012; <ago@gentoo.org> netbeans-javafx-7.2.ebuild:
   Stable for x86, wrt bug #441170
